Fixed new-blocks according to feedback
- AG blocks label under the card input was not aligned right, and fixed label icon "i";
- In wallet module: changed only src of wallet icons so no need change css colors, hided wallet on mobile (<768px width);
- In newsletter block added checkbox under email inputs;
- On bingolobby-header-v1.html page change the layout of bingoinfo modal module according to the bg issue;

--- a/src/resources/sass/blocks/_ag-block.scss
+++ b/src/resources/sass/blocks/_ag-block.scss
@@ -500,7 +500,12 @@
 .col-ag-reset {
 	display: flex;
 	align-items: center;
-	margin-bottom: 8px;
+	margin-bottom: 6px;
+	padding-left: 5px;
+
+	svg {
+		flex-shrink: 0;
+	}
 }
 
 button.ag-reset {
@@ -558,6 +563,11 @@ label.ag-label {
 
 .ag-col.col-num {
 	width: 100%;
+
+	label.ag-label {
+		margin-bottom: 6px;
+		padding-left: 5px;
+	}
 }
 
 .ag__check .invalid-text {
