--- a/src/resources/sass/blocks/_wallet-block.scss
+++ b/src/resources/sass/blocks/_wallet-block.scss
@@ -1,3 +1,7 @@
+.wallet {
+	text-decoration: none;
+}
+
 .wallet__pink {
 	padding: 4px;
 	background-color: #ECC5DE;
@@ -91,5 +95,15 @@
 
 	.wallet__text {
 		height: 100%;
+	}
+}
+
+@media screen and (max-width: 768px) {
+	.wallet {
+		display: none;
+	}
+
+	.wallet__wrapper {
+		display: none;
 	}
 }
